# task_manager

./: Cargo.toml  README.md
migrations/2024-02-02-032626_create_tasks/: down.sql  up.sql
src/: .controllers.rs.swp  .event_loop.rs.swp  .models.rs.swp  access.rs  controllers.rs  event_loop.rs  main.rs  models.rs  schema.rs  task_manager.rs
