[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13"
actix-rt = "2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde_json = "1.0.113"
rand = {version = "0.8.5", features = ["std"] }
